# markets

./: .gitignore  Cargo.toml  README.md
.deployments/: arc-testnet.json
.github/: slither.config.json
.github/workflows/: deploy-pages.yml  security.yml
agents/reverb-markets-personas/: Cargo.toml
agents/reverb-markets-personas/src/: arbiter.rs  auto_create.rs  auto_dispute.rs  auto_resolve.rs  lib.rs
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/.well-known/: agent.json
app/scripts/: smoke-dispute.ts  smoke.ts
app/src/: abi.ts  commitment.json  config.ts  main.ts  operator.ts  orders.ts  style.css  wallet.ts
auto-resolve/: .env.example  Cargo.toml  README.md
auto-resolve/registry/: markets.json
auto-resolve/src/: main.rs  operator.rs  parser.rs  post.rs  registry.rs  trace.rs
auto-resolve/src/feeds/: bls.rs  fred.rs  mod.rs
contracts/: foundry.toml  remappings.txt
contracts/script/: DeployLocal.s.sol  DeployOperator.s.sol
contracts/src/: Operator.sol
contracts/test/: Operator.t.sol  OperatorInvariant.t.sol  SelectorFreezeOperator.t.sol
foragers/reverb-markets-arc-fs/: Cargo.toml
foragers/reverb-markets-arc-fs/src/: chis.rs  hello.rs  lib.rs  tools.rs
marketing/: submission-video.md
scripts/: mint-markets-personas.sh  smoke-verify-personas.sh  start-local.sh  start-quake.sh
