[package]
name = "reverb-markets-personas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Four sovereign persona bees for Reverb Markets: auto-create, auto-resolve, auto-dispute, arbiter. Each is a thin asker that imports persona-base. https://reverbprotocol.github.io/protocol/OPERATING_MODEL ."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
persona-base.workspace = true
